[gd_scene load_steps=15 format=3 uid="uid://c13s5ya0hdjvu"]

[ext_resource type="Script" path="res://script/animation/boost_piege.gd" id="1_w8p3o"]
[ext_resource type="Texture2D" uid="uid://dwmtip5wniank" path="res://images/animation/boost_piege_animation.png" id="2_b32yk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqwj4"]
radius = 21.0

[sub_resource type="AtlasTexture" id="AtlasTexture_30yka"]
atlas = ExtResource("2_b32yk")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5cd"]
atlas = ExtResource("2_b32yk")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p32h"]
atlas = ExtResource("2_b32yk")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6kmm"]
atlas = ExtResource("2_b32yk")
region = Rect2(0, 25, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcve4"]
atlas = ExtResource("2_b32yk")
region = Rect2(25, 25, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jltwd"]
atlas = ExtResource("2_b32yk")
region = Rect2(50, 25, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_frase"]
atlas = ExtResource("2_b32yk")
region = Rect2(0, 50, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl55c"]
atlas = ExtResource("2_b32yk")
region = Rect2(25, 50, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc2ho"]
atlas = ExtResource("2_b32yk")
region = Rect2(50, 50, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_em2a6"]
atlas = ExtResource("2_b32yk")
region = Rect2(0, 75, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_mr1wh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30yka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p32h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6kmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcve4")
}, {
"duration": 20.0,
"texture": SubResource("AtlasTexture_jltwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frase")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl55c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc2ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em2a6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="boost_piege" type="Node2D"]
script = ExtResource("1_w8p3o")

[node name="piege_area" type="Area2D" parent="."]
collision_layer = 32

[node name="piege_collision" type="CollisionShape2D" parent="piege_area"]
shape = SubResource("CircleShape2D_pqwj4")

[node name="piege_animation" type="AnimatedSprite2D" parent="piege_area/piege_collision"]
texture_filter = 1
scale = Vector2(1.52, 1.52)
sprite_frames = SubResource("SpriteFrames_mr1wh")
frame = 5
frame_progress = 0.076541
speed_scale = 1.55
